--- a/config.ini
+++ b/config.ini
@@ -31,6 +31,8 @@ ekpfs_obf_key_11=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ekpfs_obf_key_12=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ekpfs_obf_key_13=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ekpfs_obf_key_14=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+ekpfs_obf_key_15=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+ekpfs_obf_key_16=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 gdgp_ekc_key_0=00000000000000000000000000000000
 gdgp_ekc_key_1=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -118,4 +120,3 @@ pfs_sig_key:e=XXXXXX
 
 ; can use suffixes like this for patches
 ;[XXXXXX-XXXXXXXXX_00_XXXXXXXXXXXXXXXX:PATCH_102]
-
